--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 
+GOOGLE_ID = 269644179488-eab9evumjochpscu7f4nmgi9tho840md.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+MONGODB_URI = mongodb+srv://owaistag:owaistag@cluster0.hjaxo0b.mongodb.net/?retryWrites=true&w=majority
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = http://localhost:3000
+NEXTAUTH_SECRET = IjcFyQ1e8gwfgoNPOv2B0YVk082XUmS8aIMdcQ1FM5A=
